atualização verificar rotas
